--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,71 @@
 altgraph==0.17.4
+appnope==0.1.4
+asttokens==3.0.0
 beautifulsoup4==4.13.4
 certifi==2025.8.3
 charset-normalizer==3.4.2
 click==8.2.1
+comm==0.2.3
 contourpy==1.3.2
 cycler==0.12.1
+dateparser==1.2.2
+debugpy==1.8.16
+decorator==5.2.1
+exceptiongroup==1.3.0
+executing==2.2.0
 filelock==3.18.0
 fonttools==4.59.0
 idna==3.10
+instaloader==4.14.2
+ipykernel==6.30.1
+ipython==8.37.0
+jedi==0.19.2
 joblib==1.5.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 kiwisolver==1.4.8
 lxml==6.0.0
 macholib==1.16.3
 matplotlib==3.10.5
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
 nltk==3.9.1
 numpy==2.2.6
 packaging==25.0
 pandas==2.3.1
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.3.0
+platformdirs==4.3.8
+praw==7.8.1
+prawcore==2.4.0
+prompt_toolkit==3.0.51
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.2
 pyinstaller==5.7.0
 pyinstaller-hooks-contrib==2025.8
 pyparsing==3.2.3
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
+pyzmq==27.0.1
 regex==2025.7.34
 requests==2.32.4
 six==1.17.0
 snscrape==0.7.0.20230622
 soupsieve==2.7
+stack-data==0.6.3
+tornado==6.5.1
 tqdm==4.67.1
+traitlets==5.14.3
 typing_extensions==4.14.1
 tzdata==2025.2
+tzlocal==5.3.1
+update-checker==0.18.0
 urllib3==2.5.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+youtube-comment-downloader==0.1.76
