--- a/requirements.txt
+++ b/requirements.txt
@@ -15,22 +15,26 @@ exceptiongroup==1.3.0
 executing==2.2.0
 filelock==3.18.0
 fonttools==4.59.0
+funcy==2.0
 gensim==4.3.3
 idna==3.10
 instaloader==4.14.2
 ipykernel==6.30.1
 ipython==8.37.0
 jedi==0.19.2
+Jinja2==3.1.6
 joblib==1.5.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.8
 lxml==6.0.0
 macholib==1.16.3
+MarkupSafe==3.0.2
 matplotlib==3.10.5
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 nltk==3.9.1
+numexpr==2.11.0
 numpy==1.26.4
 packaging==25.0
 pandas==2.3.1
@@ -47,20 +51,24 @@ pure_eval==0.2.3
 Pygments==2.19.2
 pyinstaller==5.7.0
 pyinstaller-hooks-contrib==2025.8
+pyLDAvis==3.4.1
 pyparsing==3.2.3
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 pyzmq==27.0.1
+rake-nltk==1.0.6
 regex==2025.7.34
 requests==2.32.4
+scikit-learn==1.7.1
 scipy==1.13.1
 six==1.17.0
 smart_open==7.3.0.post1
 snscrape==0.7.0.20230622
 soupsieve==2.7
 stack-data==0.6.3
+threadpoolctl==3.6.0
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
