--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 altgraph==0.17.4
+annotated-types==0.7.0
 appnope==0.1.4
 asttokens==3.0.0
 beautifulsoup4==4.13.4
+blis==1.2.1
+catalogue==2.0.10
 certifi==2025.8.3
 charset-normalizer==3.4.2
 click==8.2.1
+cloudpathlib==0.21.1
 comm==0.2.3
+confection==0.1.5
 contourpy==1.3.2
 cycler==0.12.1
+cymem==2.0.11
 dateparser==1.2.2
 debugpy==1.8.16
 decorator==5.2.1
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 exceptiongroup==1.3.0
 executing==2.2.0
 filelock==3.18.0
@@ -27,12 +34,19 @@ joblib==1.5.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
 lxml==6.0.0
 macholib==1.16.3
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.5
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+murmurhash==1.0.13
 nest-asyncio==1.6.0
+networkx==3.4.2
 nltk==3.9.1
 numexpr==2.11.0
 numpy==1.26.4
@@ -44,10 +58,13 @@ pillow==11.3.0
 platformdirs==4.3.8
 praw==7.8.1
 prawcore==2.4.0
+preshed==3.0.10
 prompt_toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pydantic==2.11.7
+pydantic_core==2.33.2
 Pygments==2.19.2
 pyinstaller==5.7.0
 pyinstaller-hooks-contrib==2025.8
@@ -61,23 +78,36 @@ pyzmq==27.0.1
 rake-nltk==1.0.6
 regex==2025.7.34
 requests==2.32.4
+rich==14.1.0
 scikit-learn==1.7.1
 scipy==1.13.1
+seaborn==0.13.2
+shellingham==1.5.4
 six==1.17.0
 smart_open==7.3.0.post1
 snscrape==0.7.0.20230622
 soupsieve==2.7
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
 stack-data==0.6.3
+thinc==8.3.4
 threadpoolctl==3.6.0
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
+typer==0.16.0
+typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
 tzlocal==5.3.1
 update-checker==0.18.0
 urllib3==2.5.0
+wasabi==1.1.3
 wcwidth==0.2.13
+weasel==0.4.1
 websocket-client==1.8.0
+wordcloud==1.9.4
 wrapt==1.17.2
 youtube-comment-downloader==0.1.76
